--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
+  <script src="https://kit.fontawesome.com/7227a7dc62.js" crossorigin="anonymous"></script>
   <title>eMercado - Todo lo que busques está aquí</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
@@ -26,26 +27,68 @@
       padding-top: 40px;
       padding-bottom: 40px;
       background-color: #f5f5f5;
+      margin: 0;
+      padding: 0;
     }
+    .login{
+    width: 280px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
-    .signin {
-      width: 100%;
-      max-width: 330px;
-      padding: 15px;
-      margin: auto;
-    }
+.login h1{
+    
+    font-size: 40px;
+    border-bottom: 3px solid;
+    margin-bottom: 50px;
+    padding: 13px 0;
+}
+
+.text{
+    width: 100%;
+    overflow: hidden ;
+    font-size: 20px;
+    padding: 8px 0;
+    margin: 8px 0;
+    border-bottom: 1px solid;
+}
+.text input{
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 18px;
+    width: 100px;
+    
+    margin: 10px;
+}
+.btn{
+    width: 100%;
+    background: none;
+    border: 2px solid;
+    padding: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 12px 0;
+
+}
+
   </style>
 </head>
 
-<body class="text-center">
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 1 (Fecha de entrega: 16/08/2020) -> Punto 3 y 4.</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
+<div class="login">
+  <h1 id="title">Login</h1>
+  <div class="text" name="" value="">
+      <i class="fas fa-user-tag"></i>
+      <input type="text" placeholder="Username" name="" value=""> 
   </div>
+  <div class="text" name="" value="">
+      <i class="fas fa-lock"></i>
+      <input type="password" placeholder="Password" name="" value=""> 
+  </div>
+  <input class="btn" type="button"  name="" value="Sign in"> 
+</div>
 
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
