--- a/login.html
+++ b/login.html
@@ -30,6 +30,16 @@
       margin: 0;
       padding: 0;
     }
+    .imagen{
+ 
+      margin: 0;
+  
+  list-style: none;
+  
+  top: 10%;
+  width: 400px;
+  padding-right: 20pt 0;
+}
     .login{
     width: 280px;
     position: absolute;
@@ -71,13 +81,14 @@
     font-size: 18px;
     cursor: pointer;
     margin: 12px 0;
-
 }
+
 
   </style>
 </head>
 
 <div class="login">
+  <img class="imagen" src="img/login.png">
   <h1 id="title">Login</h1>
   <div class="text" name="" value="">
       <i class="fas fa-user-tag"></i>
