--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
   <title>eMercado - Todo lo que busques está aquí</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet"> 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -65,7 +65,7 @@
     border-bottom: 1px solid;
 }
 .text input{
-    border: none;
+  border: hidden;
     outline: none;
     background: none;
     font-size: 18px;
@@ -87,21 +87,30 @@
   </style>
 </head>
 
+
+<body>
 <div class="login">
   <img class="imagen" src="img/login.png">
   <h1 id="title">Login</h1>
   <div class="text" name="" value="">
       <i class="fas fa-user-tag"></i>
-      <input type="text" placeholder="Username" name="" value=""> 
+      <input type="text" placeholder="Email adress"  id="email" name="" value="" onblur="myFunctionValidacion(this.value)">
+      <label id="label_email" style="display: none;"> error campo vacio</label>
   </div>
   <div class="text" name="" value="">
       <i class="fas fa-lock"></i>
-      <input type="password" placeholder="Password" name="" value=""> 
+      <input  type="password" placeholder="Password" id="pass" name="" value="" onblur="myFunctionPassword(this.value)"> 
+      <label id="label_pass" style="display: none;"> Campo vacio</label>
   </div>
-  <input class="btn" type="button"  name="" value="Sign in"> 
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1" >Remember me!</label>
+  </div>
+  <input class="btn" type="button"  name="" value="Sign in" onclick="navegacionWeb()"> 
 </div>
 
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
+  
 </body>
 </html>
