--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
+    <meta http-equiv="refresh" content="5;url=file:///C:/Users/Usuario/Desktop/dw/tareas/Workspace_inicial/proyecto-obligatorio-jap-2020/login.html">
     <title>eMercado - Todo lo que busques está aquí</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
@@ -105,5 +106,11 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
+    <script>
+     window.location.assign('login.html')
+      
+</script>
+    
+  
   </body>
 </html>
