--- a/categories.html
+++ b/categories.html
@@ -22,6 +22,7 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <a class="py-2 d-none d-md-inline-block" href="my-profile.html">Binvenido <span class="spans"></span></a>
       </div>
     </nav>
     <main role="main" class="pb-5">
@@ -87,5 +88,6 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
     <script src="js/categories.js"></script>
+    <script src="js/login.js"></script>
   </body>
 </html>
