--- a/cart.html
+++ b/cart.html
@@ -41,6 +41,7 @@
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+      <a class="py-2 d-none d-md-inline-block" href="my-profile.html">Binvenido <span class="spans"></span></a>
     </div>
   </nav>
   <div class="container p-5">
@@ -64,6 +65,8 @@
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
   <script src="js/cart.js"></script>
+  <script src="js/login.js"></script>
+
 </body>
 
 </html>
