--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <a class="py-2 d-none d-md-inline-block" href="my-profile.html">Binvenido <span class="spans"></span></a>
       </div>
     </nav>
     <main role="main">
@@ -105,6 +106,7 @@
     </footer>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/login.js"></script>
     <script src="js/init.js"></script>
     <script src="js/index.js"></script>
     
