--- a/login.html
+++ b/login.html
@@ -193,7 +193,7 @@ color: #1ed12d;
   <input class="btn" type="button"id="boton_inicio" name="" value="Sign in" onclick="navegacionWeb()">
 </div>
 <div class="formulario__mesaje" id="formulario__mensaje">
-   <p ><i class="fas fa-exclamation-triangle"></i><b> Error</b>: porfavor inserte campos correctamente</p>
+   <label id="label_mensajeS"><i class="fas fa-exclamation-triangle"></i><b> Error</b>: porfavor inserte campos correctamente</label>
 </form>
 
   <script src="js/init.js"></script>
