--- a/products.html
+++ b/products.html
@@ -20,8 +20,17 @@
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-        <a class="py-2 d-none d-md-inline-block" href="my-profile.html">Bienvenido <span class="spans"></span></a>
+        
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="nombreSecion" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Bienvenido <span class="spans"></span>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="my-profile.html">Mi Perfil</a>
+            <a class="dropdown-item" href="cart.html">Carrito</a>
+            <a class="dropdown-item" href="login.html" id="logout" onclick="cerrarSesion()">Log out</a>
+          </div>
+        </div>
       </div>
     </nav>
     
