--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
+    <script src="https://kit.fontawesome.com/7227a7dc62.js" crossorigin="anonymous"></script>
     <title>eMercado - Todo lo que busques está aquí</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
@@ -23,7 +24,7 @@
         
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="nombreSecion" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Bienvenido <span class="spans"></span>
+            <i class="fas fa-user-circle"></i> Bienvenido <span class="spans"></span>
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="my-profile.html">Mi Perfil</a>
