--- a/categories.html
+++ b/categories.html
@@ -30,9 +30,9 @@
             <i class="fas fa-user-circle"></i> Bienvenido <span class="spans"></span>
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="my-profile.html">Mi Perfil</a>
-            <a class="dropdown-item" href="cart.html">Carrito</a>
-            <a class="dropdown-item" href="login.html" id="logout" onclick="cerrarSesion()">Log out</a>
+            <a class="dropdown-item" href="my-profile.html"><i class="fas fa-user-circle"></i> Mi Perfil</a>
+            <a class="dropdown-item" href="cart.html"><i class="fas fa-shopping-cart"></i> Carrito</a>
+            <a class="dropdown-item" href="login.html" id="logout" onclick="cerrarSesion()"><i class="fas fa-sign-out-alt"></i> Cerrar Sesion</a>
           </div>
         </div>
       </div>
