--- a/cart.html
+++ b/cart.html
@@ -106,22 +106,21 @@
           <i class="fas fa-user-circle"></i> Bienvenido <span class="spans"></span>
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="my-profile.html">Mi Perfil</a>
-          <a class="dropdown-item" href="cart.html">Carrito</a>
-          <a class="dropdown-item" href="login.html" id="logout" onclick="cerrarSesion()">Log out</a>
+          <a class="dropdown-item" href="my-profile.html"><i class="fas fa-user-circle"></i> Mi Perfil</a>
+          <a class="dropdown-item" href="cart.html"><i class="fas fa-shopping-cart"></i> Carrito</a>
+          <a class="dropdown-item" href="login.html" id="logout" onclick="cerrarSesion()"><i class="fas fa-sign-out-alt"></i> Cerrar Sesion</a>
         </div>
       </div>
     </div>
   </nav>
  <div class="row">
-   <div class="card-colums shadow-sm custom-card" style="padding-left: 50px; padding-right: 50px;" >
+  
   <div class="container-fluid" >
-
-    
-        <h1>MI CARRITO <i class="fas fa-shopping-cart"></i></h1>
+<h1>MI CARRITO <i class="fas fa-shopping-cart"></i></h1>
         <p>Aqui encontraras tus productos selecionados!</p> 
          </div>
-        <br></br>
+       <br></br>
+  <div class="card-colums " style="padding-left: 50px; padding-right: 50px;" >
   <div class="row">
   <div class="col-sm-8" id="algo" >
      </div>
@@ -274,6 +273,7 @@
   
   </div>
   </div>
+</div>
   </form>
   
   <div id="spinner-wrapper">
