--- a/login.html
+++ b/login.html
@@ -8,9 +8,9 @@
   <meta name="description" content="">
   <script src="https://kit.fontawesome.com/7227a7dc62.js" crossorigin="anonymous"></script>
   <title>eMercado - Todo lo que busques está aquí</title>
-
+  
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="shortcut icon"> 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
